kubernetes-alert-manager/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/name: alertmanager
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.cloudstudent.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alertmanager
            port: 
              number: 9093
